attempting to fix minor issues where Join appears on a new line on mobile device.

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,10 +12,6 @@ body {
   background-color: grey;
 }
 
-.updateBanner {
-  background-color: yellow;
-}
-
 /* Images, Logos and Links */
 
 img {
@@ -114,6 +110,10 @@ img {
   display: block;
 }
 
+.updateBanner {
+  background-color: yellow;
+}
+
 @media (min-width: 60rem) {
   .title{
     font-size: 3.7rem;
@@ -137,6 +137,7 @@ header {
 
 nav ul {
   margin: 0;
+  padding: 0;
   list-style: none;
 }
 
@@ -168,6 +169,10 @@ nav a:focus {
 
   nav {
     float: right;
+  }
+
+  nav a {
+    font-size: 16pt;
   }
 }
 
@@ -288,11 +293,6 @@ nav a:focus {
 
 /* desktop views/larger views */
 @media (min-width: 60rem) {
-  /* larger font size was requested for web view */
-  nav a {
-    font-size: 16pt;
-  }
-
   nav li {
     display: inline-block;
     margin: 1em;
